proj2/test/test_11811905_4.out
Error type 5 at Line 8: unmatching type on both sides of assignment
Error type 7 at Line 10: binary operation on non-number variables
Error type 7 at Line 12: binary operation on non-number variables
