proj2/test/test_11811905_4.spl
struct testStruct {} a;

int func() {
    return 10;
}

int test_11811806_4() {
    float v = func() / 2;
    char a = 'a';
    if (func() > a) {
        return func();
    }else if ( func() > a ){
        return 0;
    }
}